--- a/src/app/bills/show-bill.component.html
+++ b/src/app/bills/show-bill.component.html
@@ -3,8 +3,8 @@
 <!--<img width="200" height="100" class="billHeader"-->
             <!--src="http://178.236.87.123:5000/dir/header_bill.png"/>-->
 
-<img width="200" height="100" class="billHeader"
-            src="https://i.ibb.co/fqdrtcs/header-bill.png"/>
+<!--<img width="200" height="100" class="billHeader"-->
+            <!--src="https://i.ibb.co/fqdrtcs/header-bill.png"/>-->
 <div mat-dialog-content class="text-center">
 
 
@@ -107,6 +107,7 @@
             src="http://localhost:5000/dir/footer_bill.png"/-->
   <!--<img width="200" height="100" class="billFooter"-->
             <!--src="http://178.236.87.123:5000/dir/footer_bill.png"/>-->
-  <img width="200" height="100" class="billFooter"
-            src="https://i.ibb.co/jhQf47t/footer-bill.png"/>
+
+  <!--<img width="200" height="100" class="billFooter"-->
+            <!--src="https://i.ibb.co/jhQf47t/footer-bill.png"/>-->
 </div>
