--- a/src/app/bills/bills.component.html
+++ b/src/app/bills/bills.component.html
@@ -157,48 +157,48 @@
       <div class="col-md-12" *ngIf="bills$.length > 0">
         <h4>{{ _translation('Results', langCode) }}</h4>
       </div>
-      <div class="col-md-12 mt-2 mat-elevation-z8" *ngIf="bills$.length > 0" style="overflow-x: scroll">
+      <div class="col-md-12 col-sm-12 mt-2 mat-elevation-z8" *ngIf="bills$.length > 0" style="overflow-x: scroll">
         <table mat-table [dataSource]="bills$" class="col-md-12 col-sm-12">
           <!-- Item Column -->
           <ng-container matColumnDef="title">
             <th mat-header-cell *matHeaderCellDef class="firstTableRow">{{ _translation('Title', langCode) }}</th>
             <td mat-cell *matCellDef="let bill"> {{bill.title}} </td>
-            <td mat-footer-cell *matFooterCellDef>Total</td>
+            <!--<td mat-footer-cell *matFooterCellDef>Total</td>-->
           </ng-container>
 
           <!-- Item Column -->
           <ng-container matColumnDef="comment" class="tableMobile">
             <th mat-header-cell *matHeaderCellDef class="text-center tableMobile">{{ _translation('Comment', langCode) }}</th>
             <td mat-cell *matCellDef="let bill" class="text-center tableMobile"> {{bill.comment}} </td>
-            <td mat-footer-cell *matFooterCellDef class="text-center tableMobile"></td>
+            <!--<td mat-footer-cell *matFooterCellDef class="text-center tableMobile"></td>-->
           </ng-container>
 
           <!-- Item Column -->
           <ng-container matColumnDef="bill_category">
             <th mat-header-cell *matHeaderCellDef class="text-center">{{ _translation('Category', langCode) }}</th>
             <td mat-cell *matCellDef="let bill" class="text-center"> {{bill?.bill_category?.translations?.translation_category_name}} </td>
-            <td mat-footer-cell *matFooterCellDef></td>
+            <!--<td mat-footer-cell *matFooterCellDef></td>-->
           </ng-container>
 
           <!-- Item Column -->
           <ng-container matColumnDef="bill_sub_category" class="tableMobile">
             <th mat-header-cell *matHeaderCellDef class="text-center tableMobile">{{ _translation('Sub category', langCode) }}</th>
             <td mat-cell *matCellDef="let bill" class="text-center tableMobile"> {{bill?.bill_sub_category?.translations?.translation_subcategory_name}} </td>
-            <td mat-footer-cell *matFooterCellDef class="text-center tableMobile"></td>
+            <!--<td mat-footer-cell *matFooterCellDef class="text-center tableMobile"></td>-->
           </ng-container>
 
           <!-- Item Column -->
           <ng-container matColumnDef="bill_price">
             <th mat-header-cell *matHeaderCellDef class="text-center">{{ _translation('Price', langCode) }}</th>
             <td mat-cell *matCellDef="let bill" class="text-center"> {{bill?.price}} </td>
-            <td mat-footer-cell *matFooterCellDef></td>
+            <!--<td mat-footer-cell *matFooterCellDef></td>-->
           </ng-container>
 
           <!-- Item Column -->
           <ng-container matColumnDef="bill_currency">
             <th mat-header-cell *matHeaderCellDef class="text-center">{{ _translation('Curr.', langCode) }}</th>
             <td mat-cell *matCellDef="let bill" class="text-center"> {{bill?.currency?.code}} </td>
-            <td mat-footer-cell *matFooterCellDef></td>
+            <!--<td mat-footer-cell *matFooterCellDef></td>-->
           </ng-container>
 
           <!-- Item Column -->
@@ -219,7 +219,7 @@
             <td mat-cell *matCellDef="let bill" class="text-center">
               <button mat-button matTooltip="{{ _translation('Show details', langCode) }}" (click)="openDialogShowBill(bill)"><i class="material-icons">open_in_new</i></button>
             </td>
-            <td mat-footer-cell *matFooterCellDef></td>
+            <!--<td mat-footer-cell *matFooterCellDef></td>-->
           </ng-container>
 
           <!-- Cost Column >
@@ -233,7 +233,7 @@
 
           <tr mat-header-row *matHeaderRowDef="displayedColumns" class="tableHeader"></tr>
           <tr mat-row *matRowDef="let row; columns: displayedColumns;" class="data"></tr>
-          <tr mat-footer-row *matFooterRowDef="displayedColumns" class="tableFooter"></tr>
+          <!--<tr mat-footer-row *matFooterRowDef="displayedColumns" class="tableFooter"></tr>-->
         </table>
         <mat-paginator [pageSizeOptions]="[5, 10, 20]" pageSize="{{ billsLimit }}" (page)="changeOffsetLimit($event)" length="{{billsLengthList}}" showFirstLastButtons></mat-paginator>
       </div>
