--- a/src/app/bills/new-bill.component.html
+++ b/src/app/bills/new-bill.component.html
@@ -2,8 +2,9 @@
             src="http://localhost:5000/dir/header_bill.png"/-->
 <!--<img width="200" height="100" class="billHeader"-->
 <!--src="http://178.236.87.123:5000/dir/header_bill.png"/>-->
-<img width="200" height="100" class="billHeader"
-     src="https://i.ibb.co/fqdrtcs/header-bill.png"/>
+
+<!--<img width="200" height="100" class="billHeader"-->
+     <!--src="https://i.ibb.co/fqdrtcs/header-bill.png"/>-->
 <div mat-dialog-content class="text-center">
   <div *ngIf="data.newBillType == 'costs'">
     <p>{{ _translation('Add new bill (Cost)', langCode) }}</p>
@@ -95,8 +96,9 @@
             src="http://localhost:5000/dir/footer_bill.png"/-->
   <!--<img width="200" height="100" class="billFooter"-->
   <!--src="http://178.236.87.123:5000/dir/footer_bill.png"/>-->
-  <img width="200" height="100" class="billFooter"
-       src="https://i.ibb.co/jhQf47t/footer-bill.png"/>
+
+  <!--<img width="200" height="100" class="billFooter"-->
+       <!--src="https://i.ibb.co/jhQf47t/footer-bill.png"/>-->
 </div>
 
 
