--- a/src/app/graph/graph.component.html
+++ b/src/app/graph/graph.component.html
@@ -11,7 +11,7 @@
   <!--<p style="font-size: 20px; color: white">Loading...</p>-->
 </ngx-spinner>
 
-<div>
+<div class="graph">
   <div class="row pr-1 pl-1 mt-1">
     <div class="col-md-12 col-sm-12">
       <mat-form-field class="w-100">
@@ -55,19 +55,19 @@
     </div>
   </div>
   <div class="row pr-1 pl-1" *ngIf="bills && bills.bills.length > 0">
-    <div class="col-md-3 col-sm-12">
+    <div class="col-md-3 col-sm-12 priceColumn">
       <p>{{ _translation('Min cost', langCode) }}: {{bills?.min_cost}}</p>
     </div>
-    <div class="col-md-3 col-sm-12">
+    <div class="col-md-3 col-sm-12 priceColumn">
       <p>{{ _translation('Max cost', langCode) }}: {{bills?.max_cost}}</p>
     </div>
-    <div class="col-md-3 col-sm-12">
+    <div class="col-md-3 col-sm-12 priceColumn">
       <p>{{ _translation('Min profit', langCode) }}: {{bills?.min_profit}}</p>
     </div>
-    <div class="col-md-3 col-sm-12">
+    <div class="col-md-3 col-sm-12 priceColumn">
       <p>{{ _translation('Max profit', langCode) }}: {{bills?.max_profit}}</p>
     </div>
-    <div class="col-md-3 col-sm-12">
+    <div class="col-md-3 col-sm-12 priceColumn">
       <p>{{ _translation('Costs', langCode) }}: {{bills?.costs}}</p>
     </div>
     <div class="col-md-3 col-sm-12">
@@ -76,7 +76,7 @@
   </div>
 </div>
 <div class="mobileGraph" *ngIf="bills && bills.bills.length > 0">
-  <fusioncharts
+  <fusioncharts class="lineChart"
     [type]="type"
     [width]="width"
     [height]="height"
@@ -84,7 +84,7 @@
   >
   </fusioncharts>
 </div>
-<div>
+<div class="pieChart">
   <fusioncharts *ngIf="bills && dataCostCategoryPie.length > 0"
                 [width]="width"
                 [height]="height"
