--- a/src/app/profile/profile.component.scss
+++ b/src/app/profile/profile.component.scss
@@ -3,9 +3,12 @@
   border-radius: 5px;
   box-shadow: 0px 10px 20px rgba(128,128,128,0.5);
   min-height: 700px;
+  color: #66FCF1;
+  background-color: #0B0C10;
 
   @media (max-width: 767px) {
     //padding: 0;
+    border-radius: unset;
   }
 }
 
@@ -28,13 +31,13 @@
 .breakSection {
   width: 100%;
   height: 10px;
-  border-bottom: 1px solid black;
+  border-bottom: 1px solid #66FCF1;
 }
 
 .information {
   .row {
     &:hover {
-      background-color: lightgray;
+      background-color: #1F2833;
       transition: background-color 1s;
     }
   }
@@ -71,5 +74,25 @@
   }
 }
 
+button {
+  border-radius: 50px;
+  background-color: #1F2833 !important;
+  color: #66FCF1 !important;
+}
 
+/deep/ .mat-tab-label-content {
+  color: #66FCF1 !important;
+}
+
+/deep/ mat-ink-bar {
+  background-color: #66FCF1 !important;
+}
+
+/deep/ .mat-tab-header-pagination-chevron {
+  border-color: #66FCF1 !important;
+}
+
+/deep/ .mat-tab-label-active {
+  background-color: #1F2833 !important;
+}
 
