--- a/src/app/dashboard/dashboard.component.scss
+++ b/src/app/dashboard/dashboard.component.scss
@@ -76,7 +76,7 @@
   a {
     background-color: #1F2833 !important;
     color: #66FCF1 !important;
-    border-bottom: 1px solid;
+    //border-bottom: 1px solid;
   }
 }
 
