--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -85,9 +85,9 @@ button {
   background-color: #66FCF1 !important;
 }
 
-///deep/ .mat-form-field-appearance-legacy .mat-form-field-underline {
-//  background-color: #66FCF1 !important;
-//}
+/deep/ .mat-form-field-appearance-legacy .mat-form-field-underline {
+  background-color: #66FCF1 !important;
+}
 
 /deep/ .mat-select-arrow-wrapper {
   background-color: #66FCF1 !important;
