--- a/src/app/profile/change_password.scss
+++ b/src/app/profile/change_password.scss
@@ -62,3 +62,7 @@ button {
 /deep/ .mat-progress-bar-fill::after {
   background-color: #45A29E !important;
 }
+
+/deep/ .mat-form-field-appearance-legacy .mat-form-field-underline {
+  background-color: #66FCF1 !important;
+}
