--- a/src/app/bills/bills.component.scss
+++ b/src/app/bills/bills.component.scss
@@ -48,9 +48,12 @@ tr.mat-footer-row {
 
 .data {
   &:hover {
-    background-color: lightgray;
+    background-color: #C5C6C7;
     box-shadow: 15px 15px 20px rgba(128, 128, 128, 0.5);
-    background: lightgray;
+    color: #1F2833 !important;
+    .mat-cell {
+      color: #1F2833 !important;
+    }
   }
 }
 
@@ -229,4 +232,8 @@ button {
 
 /deep/ .mat-input-element:disabled {
   color: #66FCF1 !important;
+}
+
+/deep/ .mat-form-field-appearance-legacy .mat-form-field-underline {
+  background-color: #66FCF1 !important;
 }
