--- a/src/app/bills/show-bill.component.scss
+++ b/src/app/bills/show-bill.component.scss
@@ -56,3 +56,7 @@ button {
   border-radius: 5px;
   box-shadow: 0px 10px 20px rgba(128,128,128,0.5);
 }
+
+/deep/ .mat-form-field-appearance-legacy .mat-form-field-underline {
+  background-color: #66FCF1 !important;
+}
