--- a/src/app/bugs/bugs.component.scss
+++ b/src/app/bugs/bugs.component.scss
@@ -21,3 +21,9 @@
     background-color: lightblue;
   }
 }
+
+button {
+  border-radius: 50px;
+  background-color: #1F2833 !important;
+  color: #66FCF1 !important;
+}
