--- a/src/app/application/application.component.scss
+++ b/src/app/application/application.component.scss
@@ -1,8 +1,8 @@
 /deep/ .br-default .br-selected:after {
-    color: blue !important;
+    color: #66FCF1 !important;
 }
 /deep/ .br-default .br-active:after {
-    color: blue !important;
+    color: #66FCF1 !important;
 }
 
 /deep/ bar-rating{
@@ -19,8 +19,16 @@
   border-radius: 5px;
   box-shadow: 0px 10px 20px rgba(128,128,128,0.5);
   min-height: 700px;
-
+  color: #66FCF1;
   @media (max-width: 767px) {
     //padding: 0;
+    border-radius: unset;
+    border: unset;
   }
+}
+
+button {
+  border-radius: 50px;
+  background-color: #1F2833 !important;
+  color: #66FCF1 !important;
 }
