--- a/src/app/news/news.component.html
+++ b/src/app/news/news.component.html
@@ -6,10 +6,10 @@
 >
   <!--<p style="font-size: 20px; color: white">Loading...</p>-->
 </ngx-spinner>
-<div class="pl-2 pr-2" *ngIf="news.length > 0">
+<div class="pl-2 pr-2 news" *ngIf="news.length > 0">
   <h3 class="w-100 text-center">News and information</h3>
   <div *ngFor="let n of news">
-    <div class="p-1 mb-1" style="border: 1px solid black">
+    <div class="p-1 mb-1 newsCard">
       <div class="row">
         <div class="col-md-6 col-sm-6">
           <h5>Title: {{ n.title }}</h5>
