--- a/src/app/restart-password/restart-password.component.scss
+++ b/src/app/restart-password/restart-password.component.scss
@@ -32,9 +32,43 @@
 }
 
 .red {
-  color: darkred;
+  color: #F44336;
 }
 
 .green {
-  color: green;
+  color: #66FCF1;
+}
+
+button {
+  border-radius: 50px;
+  background-color: #1F2833 !important;
+  color: #66FCF1 !important;
+}
+
+/deep/ .mat-form-field.mat-focused .mat-form-field-label {
+  color: #66FCF1 !important;
+}
+
+/deep/ .mat-form-field-appearance-legacy .mat-form-field-label {
+  color: #66FCF1 !important;
+}
+
+/deep/ .mat-form-field.mat-form-field-invalid .mat-form-field-label {
+  color: #F44336 !important;
+}
+
+/deep/ .mat-form-field.mat-focused .mat-form-field-ripple {
+  background-color: #66FCF1 !important;
+}
+
+/deep/ .mat-select-arrow-wrapper {
+  background-color: #66FCF1 !important;
+}
+
+/deep/ .mat-form-field-appearance-legacy .mat-form-field-underline {
+  background-color: #66FCF1 !important;
+}
+
+/deep/ .mat-progress-bar-fill::after {
+  background-color: #45A29E !important;
 }
