--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -43,6 +43,11 @@
         <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
       </button>
       <span></span>
+      <div class="w-100 text-right">
+        <!--<button type="button" mat-raised-button color="primary" class="btn-block subscribePushNotificationButton">-->
+          <!--Push Notification-->
+        <!--</button>-->
+      </div>
     </mat-toolbar>
     <div class="p-5 dashboard-content">
       <router-outlet></router-outlet>
