--- a/src/app/dashboard/dashboard.component.scss
+++ b/src/app/dashboard/dashboard.component.scss
@@ -89,3 +89,7 @@ button {
   background-color: #1F2833 !important;
   color: #66FCF1 !important;
 }
+
+.subscribePushNotificationButton {
+  width: 200px;
+}
