--- a/src/app/application/application.component.html
+++ b/src/app/application/application.component.html
@@ -34,6 +34,12 @@
         {{ _translation('Suggestions', langCode)}}
       </button>
     </div>
+    <div class="col-md-6 col-sm-12 p-1">
+      <button type="button" mat-raised-button color="primary" class="btn-block newBillButton" (click)="redirectToApplicationInfo()">
+        <i class="material-icons">info</i>
+        {{ _translation('Application info', langCode)}}
+      </button>
+    </div>
   </div>
   <router-outlet></router-outlet>
 </div>
