--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -5,9 +5,9 @@
     </i> News and information
   </div>
   <div class="col-md-12 col-sm-12 mt-1 pr-1 infoContent">
-    Users can see all news and information about things that changed, added or removed.
-    This section is loaded by default after login. To get back on news and information
-    user needs click on E-Wallet (on menu).
+    Users can see all news and information about things that were changed, added or
+    removed. This section is loaded by default after login. To get back on news and
+    information user needs to click on E-Wallet (on menu).
   </div>
   <div class="col-md-12 col-sm-12 mt-1 pr-1 infoHeader">
     <i class="material-icons">
@@ -23,10 +23,10 @@
     </i> Change password
   </div>
   <div class="col-md-12 col-sm-12 mt-1 pr-1 infoContent">
-    Users can change password using combination of upper, lower letters, special symbols,
-    numbers, and min 8 symbols e.g. "iwe56Jot.". To change password through profile user needs
-    know old password. After changing password user will be inactive and needs use an activation
-    code sent on email.
+    Users can change password using combination of upper-case, lower-case letters, special
+    symbols, numbers, and min 8 symbols e.g. "iwe56Jot.". To change password through profile
+    user needs to know old password. After changing password user will be inactive and needs
+    to use an activation code sent on email.
   </div>
   <div class="col-md-12 col-sm-12 mt-1 pr-1 infoSubHeader">
     <i class="material-icons">
@@ -35,11 +35,12 @@
   </div>
   <div class="col-md-12 col-sm-12 mt-1 pr-1 infoContent">
     Users can edit their profiles through edit form. Edit form will allow changing any attributes
-    except city and country (User can ask administrator to change current city and country only if
-    user doesn't have any bills). Default currency will help users to adding bills faster (If user
-    has a default currency, then all new bills will select default currency and user can change user
-    currency whenever wants. Categories, subcategories and currencies are information that calculated
-    automatic when user add some category, subcategory or currency inside options.
+    except city and country (User can ask administrator to change current city and country only
+    if user doesn't have any bills). Default currency will help users to add bills faster
+    (If user has a default currency, then all new bills will select default currency and
+    user can change user currency whenever user wants. Categories, subcategories and currencies
+    are information that is calculated automatically when user adds some category, subcategory or
+    currency inside options.
   </div>
   <div class="col-md-12 col-sm-12 mt-1 pr-1 infoHeader">
     <i class="material-icons">
@@ -58,7 +59,7 @@
     Users can switch bills view using button switch
     <i class="material-icons">
       swap_vert
-    </i>. After users picked bills type, all action will be connected with picked type e.g.
+    </i>. After users chose bills type, every action will be related to chosen type e.g.
     adding bills, printing reports, seeing table of bills.
   </div>
   <div class="col-md-12 col-sm-12 mt-1 pr-1 infoSubHeader">
@@ -68,12 +69,12 @@
   </div>
   <div class="col-md-12 col-sm-12 mt-1 pr-1 infoContent">
     Users can filter data by Category, Subcategory, Currency, Date and Location.
-    After picking Category user can pick only Subcategory that is connected wit picked Category.
-    Also user can pick only Category and Currency that is saved in users categories or user
-    currencies (check options). Filtering by date (from, to) users can see all bills from picked
+    After picking Category user can pick only Subcategory that is related with chosen Category.
+    Also user can chose only Category and Currency that is saved in users categories or user
+    currencies (check the options). Filtering by date (from, to) users can see all bills from chosen
     date for filter from date (included), or to date for filter to date (not included). E.g. if
-    user want see all bills for some specific month then user need pick first day in filter from
-    date and first day in filter to date.
+    user wants to see all bills for some specific month then user needs to pick the first day in filter from
+    date and the first day in filter to date.
   </div>
   <div class="col-md-12 col-sm-12 mt-1 pr-1 infoSubHeader">
     <i class="material-icons">
@@ -89,7 +90,7 @@
     </i> New bill
   </div>
   <div class="col-md-12 col-sm-12 mt-1 pr-1 infoContent">
-    To add a new bill user need fill all required fields Category, Currency (can be default),
+    To add a new bill user needs to fill all required fields Category, Currency (can be default),
     Title, Price and Quantity (1 by default). Also users can set a comment to describe their bills
     e.g. (I bought a new car for 10000€ in München when I visited my friend..). Manipulation with
     date is not allowed (when bill is added that will be a bill date). Users also can use "Not My City"
@@ -98,7 +99,7 @@
     if user want se all increasing or decreasing of price for specific category/subcategory. E.g.
     user added some bill 01.10.2019 and he paid 50.00€ for 26.00l of fuel (diesel), after that user added
     an another bill 01.01.2020 and he paid 50.00€ for 24.18l of fuel (diesel) and as we can see, the price
-    of fuel (diesel) increase for 0.1447€ per liter. Users can make some research using their own
+    of fuel (diesel) increase for 0.1447€ per liter. Users can to make some research using their own
     data.
   </div>
   <div class="col-md-12 col-sm-12 mt-1 pr-1 infoSubHeader">
@@ -109,7 +110,7 @@
   <div class="col-md-12 col-sm-12 mt-1 pr-1 infoContent">
     Using show info <i class="material-icons">open_in_new</i> on results table user can view all
     details of specific bill, also user can edit and delete bill. Edit bills work same just like
-    adding bills, all required fields need be filled. User can change all attributes except date.
+    adding bills, all required fields need to be filled. User can change all attributes except date.
   </div>
   <div class="col-md-12 col-sm-12 mt-1 pr-1 infoSubHeader">
     <i class="material-icons">
@@ -126,13 +127,13 @@
     </i> Graph <i class="material-icons">equalizer</i>
   </div>
   <div class="col-md-12 col-sm-12 mt-1 pr-1 infoContent">
-    Users can see graphs (line and pie) to get information in which period user spends most money.
-    This section is useful to get information which period is critical and help user to decrease own
+    Users can see the graphs (line and pie) to get information in which period user spends most money.
+    This section is useful to get information which period is critical and helps user to decrease own
     costs. In this section user has two filters (currency and date) that work exactly same like bills
-    filters. Line graph will be able to see only if user has at least two bills with different date e.g.
-    user added bill for fuel category on 01.01.2020 and user added another bill for fuel category on
-    05.01.2020. Line graph will show state from 01-05 (including both if user doesn't use date filter),
-    that means there will be 5 points on graph. Days that user didn't add any bills will be defined by
+    filters. The line graph will be able to see only if user has at least two bills with different date e.g.
+    user added the bill for the fuel category on 01.01.2020 and user added the another bill for the fuel category on
+    05.01.2020. The line graph will show the state from 01-05 (including both if user doesn't use the date filter),
+    that means there will be 5 points on the graph. Days that user didn't add any bills will be defined by
     value 0. Pie graph (4 of them) will be able to see if user has at least one bill with some category or
     subcategory.
   </div>
@@ -142,22 +143,22 @@
     </i> Options <i class="material-icons">settings</i>
   </div>
   <div class="col-md-12 col-sm-12 mt-1 pr-1 infoContent">
-    In this section users can add categories, subcategories and currencies that want to use. To add some
-    specific subcategory user first needs add category that subcategories belong. User can add max 10
+    In this section users can add categories, subcategories and currencies that they want to use. To add some
+    specific subcategory user first needs to add the category that the subcategories belong. User can add max 10
     currencies, also can add currency monthly limit (one of next features will send news when user is to
     close to monthly limit or when user exceeded monthly limit. To delete specific category, subcategory or
-    currency, user needs first delete or change all bills that use that category, subcategory or currency.
+    currency, the user needs to first delete or change all bills that use that category, subcategory or currency.
     User can search specific category, subcategory or currency depends on status of attributes. Status could
-    be active or inactive. To delete specific category, subcategory or currency user needs just click on circle
-    within name of specific attribute.
+    be active or inactive. To delete specific category, subcategory or currency the user needs just to click on circle
+    with the name of specific attribute.
   </div>
   <div class="col-md-12 col-sm-12 mt-1 pr-1 infoHeader">
     <i class="material-icons">
       keyboard_arrow_right
-    </i> Application <i class="material-icons">application</i>
+    </i> Application <i class="material-icons">apps</i>
   </div>
   <div class="col-md-12 col-sm-12 mt-1 pr-1 infoContent">
-    In this section users can reports application bugs or suggests some suggestions, rate application and see how
+    In this section users can reports the application bugs or suggests some suggestions, rate the application and see how
     application works. How application grows there will be the new sections about application.
   </div>
 </div>
