--- a/src/app/graph/graph.component.scss
+++ b/src/app/graph/graph.component.scss
@@ -108,3 +108,7 @@ button {
 /deep/ .mat-form-field-appearance-legacy .mat-form-field-underline {
   background-color: #66FCF1 !important;
 }
+
+/deep/ rect {
+  fill: #0B0C10 !important;
+}
